# lattice

./: CMakeLists.txt  agent.cpp  agent.h  lattice.cpp  lattice.h  main.cpp  simulation.cpp  simulation.h  totals.py
